-marines wait behind bunker at nat while it produces -when base is under attack, marines will prefer to be in bunker if there are enemies in range of bunker -added some chat messages to ExpansionClearing to find bug of raven flying away after placing turret -preference to building/rebuilding structures in ramp/reaper wall positions -small refactor on wall identifying methods